# learn-c

./: CMakeLists.txt  README  README.md  hello_world.c  test.sh
projects/doubly_linked_string_list/: .gitignore  CMakeLists.txt  ChangeLog  README.md  test.sh
projects/doubly_linked_string_list/src/: CMakeLists.txt  dl_string_list.c  dl_string_list.h  main.c
projects/doubly_linked_string_list/tests/: CMakeLists.txt  check_dl_string_list.c
src/: CMakeLists.txt  hello_world.c  hello_world.h  main.c
tests/: CMakeLists.txt  check_hello_world.c
